--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,22 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/css/min/style.min.css' />
+    <script src="/js/min/socket.io.min.js"></script>
   </head>
   <body>
-    <h1><%= title %></h1>
+    <h1 onclick="socketInit()"><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
+  <script type="text/javascript">
+//      var socket=io.connect("http://localhost:3001");//与服务器进行连接
+//      function socketInit(){
+//          socket.emit('foo', 'hello World');//发送一个名为foo的事件，并且传递一个字符串数据‘hello’
+//      }
+      var socket = io('http://localhost:3001');
+      socket.on('news', function (data) {
+          console.log(data);
+          socket.emit('my other event', { my: 'data' });
+      });
+  </script>
 </html>
