--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
 //          socket.emit('foo', 'hello World');//发送一个名为foo的事件，并且传递一个字符串数据‘hello’
 //      }
       var socket = io('http://localhost:3001');
-      socket.on('news', function (data) {
+      socket.on('private message', function (data) {
           console.log(data);
-          socket.emit('my other event', { my: 'data' });
+          socket.emit('private message', { my: 'data' });
       });
   </script>
 </html>
