--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,5 +21,36 @@
           socket.emit('private123', { message: 'data',target:'target' });
       });
 
+//登录实体类
+var loginBean = {
+    uId:'',
+    username:'',
+    password:'',
+    getUId : function(){
+        return this.uId;
+    },
+    setUId : function(uId){
+        this.uId = uId;
+    },
+    getUsername : function(){
+        return this.username;
+    },
+    setUsername : function(username){
+        this.username = username;
+    },
+    getPassword : function(){
+        return this.password;
+    },
+    setPassword : function(password){
+        this.password = password;
+    }
+};
+
+var arr = [];
+      for(var key in loginBean){
+          arr.push(key);
+          console.log(key+":"+typeof key);
+      }
+
   </script>
 </html>
