一对一聊天实现

--- a/public_dev/css/style.scss
+++ b/public_dev/css/style.scss
@@ -37,7 +37,7 @@ body {
 }
 
 .body-bg{
-  background: url("../images/bg.jpg") no-repeat left top;
+  //background: url("../images/bg.jpg") no-repeat left top;
   background-size: cover;
   position: absolute;
   z-index: -1;
