--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,14 +5,15 @@ body {
   font-size: 1.4rem;
   padding: 0;
   margin: 0;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  min-width: 1200px; }
 
 .body-bg {
   background-size: cover;
   position: absolute;
   z-index: -1;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   -webkit-filter: blur(2px);
   /* Chrome, Opera */
   -moz-filter: blur(2px);
@@ -22,18 +23,24 @@ body {
 a {
   color: #00B7FF; }
 
+.container {
+  min-width: 1200px;
+  height: 100vh; }
+
 .float-left, .left-box, .mid-box, .right-box {
   float: left; }
 
 .left-box {
-  width: 10vw;
-  height: 100vh;
+  width: 10%;
+  height: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   color: #fff;
   background-color: rgba(28, 175, 226, 0.8);
-  display: block; }
+  display: block;
+  padding: 0 1rem;
+  position: relative; }
 
 .left-box .icon {
   border: 1px solid #fff;
@@ -42,21 +49,88 @@ a {
 .left-box .icon.active {
   background-color: #fff; }
 
+.myPic {
+  width: 100%;
+  margin-top: 8rem; }
+
 .mid-box {
-  width: 24vw;
-  height: 100vh;
+  width: 24%;
+  height: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: scroll;
   display: block;
   background-color: rgba(255, 255, 255, 0.8);
   border-right: 1px solid #ccc; }
+
+.mid-box .am-list > li {
+  padding: 1rem;
+  height: 10rem;
+  line-height: 8rem; }
+
+.mid-box .am-list > li.active {
+  background-color: #eee; }
+
+.list-img {
+  width: 6rem; }
 
 .right-box {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  width: 66vw;
-  height: 100vh;
+  width: 66%;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.7);
   display: block; }
+
+.right-top {
+  width: 100%;
+  height: 5rem;
+  border-bottom: 1px solid #eee;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  line-height: 5rem; }
+
+.right-middle {
+  width: 100%;
+  height: 60%;
+  border-bottom: 1px solid #eee;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: scroll; }
+
+.right-middle .am-list > li {
+  border: none; }
+
+.right-bottom {
+  width: 100%;
+  height: 28%; }
+
+.tool-list {
+  list-style: none; }
+
+.tool-list li {
+  float: left;
+  padding: 10px; }
+
+.textInput {
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 1rem; }
+
+.textInput textarea {
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid #efefef;
+  resize: none; }
